feat: implement Redis caching for user sessions, skills, and profiles